--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-pycrypto = "*"
 django = "*"
+cryptography = "*"
 
 [requires]
 python_version = "3.6"
